# pixel

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md  imgui.ini  rust-toolchain
app/: Cargo.toml  build.rs
app/android/: Cargo.toml
app/android/project/app/src/main/: AndroidManifest.xml
app/android/project/gradle/wrapper/: gradle-wrapper.properties
app/android/src/: lib.rs
app/assets/textures/: World.xcf
app/desktop/: Cargo.toml
app/desktop/src/: main.rs
app/game/: Cargo.toml  build.rs
app/game/assets/: credits
app/game/src/: game.rs  lib.rs
app/src/: main.rs
components/assets_pipeline/: Cargo.toml
components/assets_pipeline/src/: asset_database.rs  lib.rs
components/audio_engine/: Cargo.toml  build.rs
components/audio_engine/src/: audio.rs  audio_system.rs  lib.rs
components/audio_engine/src/fmod_sys/: mod.rs
components/audio_engine/test/music/: LICENSE
components/event_pipeline/: Cargo.toml
components/event_pipeline/src/: lib.rs
components/graphics_engine/: Cargo.toml  build.rs
components/graphics_engine/src/: colour.rs  drawable.rs  imgui_ext.rs  imgui_wrapper.rs  lib.rs  render_pipeline.rs
components/graphics_engine/src/gl_wrap/: element_array_buffer.rs  mod.rs  shader.rs  texture2d.rs  vertex_array_object.rs  vertex_buffer.rs
components/graphics_engine/src/objects/: draw_mode.rs  material.rs  mod.rs  sprite.rs  sprite_batch.rs
components/graphics_engine/src/objects/gl/: element_array_buffer.rs  shader.rs  texture2d.rs  vertex_array_object.rs  vertex_buffer.rs
components/graphics_engine/src/objects/primitives/: quad.rs
components/imgui_debug_utils/: Cargo.toml
components/imgui_debug_utils/src/: asset_browser.rs  imgui_console.rs  lib.rs
