[package]
name = "app"
version = "0.1.0"
authors = ["Robin A. P. <me@mempler.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NOTE: we have to include the fmod logo in our final game as splash screen!
audio_engine = { path = "../components/audio_engine" }
graphics_engine = { path = "../components/graphics_engine" }
event_pipeline = { path = "../components/event_pipeline" }
assets_pipeline = { path = "../components/assets_pipeline" }

discord-rpc-client = "0.3.0"
lazy_static = "1.4.0"
parking_lot = "0.11.0"

[build-dependencies]
assets_pipeline = { path = "../components/assets_pipeline" }
