[package]
name = "pixel-game-android"
version = "0.1.0"
authors = ["Robin A. P. <me@mempler.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixel_game = { path = "../game" }
jni = "0.16.0"
libc = "0.2.71"
android_log = "0.1.3"
log = "0.4.8"

[lib]
name = "pixel_game"
crate-type = ["cdylib"]
