[package]
name = "assets_pipeline"
version = "0.1.0"
authors = ["Robin A. P. <me@mempler.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
globwalk = "0.3.0"
byteorder = "1.3.4"
image = "0.23.6"
flate2 = "1.0.14"
