[package]
name = "graphics_engine"
version = "0.1.0"
authors = ["Robin A. P. <me@mempler.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event_pipeline = { path = "../event_pipeline" }

sdl2 = { version="0.34", default-features = false }
log = "0.4.8"
image = "0.23.6"
imgui = "0.4.0"
imgui-sdl2 = "0.11.0"
imgui-opengl-renderer = "0.8.0"
nalgebra-glm = "0.7.0"
bitflags = "1.2.1"

[build-dependencies]
globwalk = "0.8.0"
gl_generator = "0.14.0"
