[package]
name = "imgui_debug_utils"
version = "0.1.0"
authors = ["Robin A. P. <me@mempler.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.4.0"
log = "0.4.8"
bytesize = "1.0.1"
image = "0.23.6"

assets_pipeline = { path = "../assets_pipeline" }
audio_engine = { path = "../audio_engine" }
graphics_engine = { path = "../graphics_engine" }
